Bug 1266857 Make Clients.claim() use observer document list instead of secondary hashtable. r=bz